--- a/AssignFirst.html
+++ b/AssignFirst.html
@@ -1,42 +1,42 @@
 <html>
 <head>
-	<title>Assignment No-1</title>
-	 <link rel="stylesheet" href="style.css">
-	</head>
-	<body>
-		<section class="SECTION-ONE">
-			<div class="nav-bar">
-				<div class="img-1"><img src="google image.jpg" id="log-img"></div>
-				<div class="list-1">
-					<ol id="l-1">
-						<li><a href="home"><span>HOME</span></a></li>
-						<li><a href="Aboutus"><span>ABOUT US</span></a></li>
-						<li><a href="portfolio"><span>PORTFOLIO</span></a></li>
-						<li><a href="ourteam"><span>OUR TEAM</span></a></li>
-						<li><a href="plan"><span>PLANS</span></a></li>
-						<li><a href="contact"><span>CONTACT</span></a></li>
-					</ol>
-				</div>
-			</div>
-		</section>
+  <title>Assignment No-1</title>
+   <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <section class="SECTION-ONE">
+      <div class="nav-bar">
+        <div class="img-1"><img src="google image.jpg" id="log-img"></div>
+        <div class="navigation-list">
+          <ol id="l-1">
+            <li id="li-1"><a href="home"><span>HOME</span></a></li>
+            <li id="li-1"><a href="Aboutus"><span>ABOUT US</span></a></li>
+            <li id="li-1"><a href="portfolio"><span>PORTFOLIO</span></a></li>
+            <li id="li-1"><a href="ourteam"><span>OUR TEAM</span></a></li>
+            <li id="li-1"><a href="plan"><span>PLANS</span></a></li>
+            <li id="li-1"><a href="contact"><span>CONTACT</span></a></li>
+          </ol>
+        </div>
+      </div>
+    </section>
 
 
 
 
      <section class="SECTION-TWO">
-		<div class="image-2">
-			  <img src="image-2.png" id="img-2">
-		</div>
+    <div class="image-2">
+        <img src="image-2.png" id="img-2">
+    </div>
     </section>
 
     <section class="SECTION-THIRD">
-  	     <div class="sec-1">
-  		     <h1 id="heading-1">About Us</h1>
-  		     <hr id="line-1">
+         <div class="sec-1">
+           <h1 id="aboutus">About Us</h1>
+           <hr id="aboutus-line">
          </div>
-  	     <div class="sec-2">
-  		   <p id="para-1">Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields. Most designers have their own description of the design process but mostly these resemble each other. Most designers have their own description of the design process Most designers have their own description of the design process.</p>
-  	   </div>
+         <div class="sec-2">
+         <p id="para-aboutus">Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields. Most designers have their own description of the design process but mostly these resemble each other. </p>
+       </div>
      </section>
 
 
@@ -44,173 +44,163 @@
 
 
 
-<section class="SECTION-FOUR">
-	<div class="sec-3">
-		<h1 id="heading-2">Our Experitise</h1>
-      <hr id="line-2">
-		
-		<div class="progress1">
-			<progress max="100" value="90" data-label="90%"> </progress>
-			<small>BRANDING</small>
-		</div>
+                    <section class="SECTION-FOUR">
+                            <div class="sec-3">
+                            <h1 id="Experitise">Our Experitise</h1>
+                            <hr id="experities-line">
+    
+                          <div class="progress1">
+                              <progress max="100" value="90" data-label="90%"> </progress>
+                              <small>BRANDING</small>
+                          </div>
 
-			<div id="progress-2">
-			<progress max="100" value="80" data-label="80%"> </progress>
-			<small>DESGIN</small>
-		</div>
+                          <div id="progress-2">
+                               <progress max="100" value="80" data-label="80%"> </progress>
+                               <small>DESGIN</small>
+                          </div>
 
-			<div id="progress-3">
-			<progress max="100" value="85" data-label="85%"> </progress>
-			<small>DEVELOPMENT</small>
-		</div>
-  </div>
-<div class="sec-4">
-		<p id="para-2">Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields. Most designers have their own description of the design process but mostly these resemble each other. Most designers have their own description of the design process.</p>
-</div>
-</section>
-
-
+                          <div id="progress-3">
+                               <progress max="100" value="85" data-label="85%"> </progress>
+                               <small>DEVELOPMENT</small>
+                         </div>
+                        </div>
+                         <div class="sec-4">
+                              <p id="para-experities">Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields. Most designers have their own description of the design process but mostly these resemble each other. Most designers have their own description of the design process.</p>
+                         </div>
+                  </section>
 
 
-<section class="SECTION-FIVE">
-  	<div class="sec-5">
-  		<img src="google image.jpg" id="img-3">
-  		<h2> GRAPHIC DESIGN</h2>
-  		<p  id="para-3">Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields.</p>
-  	</div>
 
-  	<div class="sec-6">
-  			<img src="google image.jpg" id="img-3">
-  		<h2>GRAPHIC DESIGN</h2>
-  		<p  id="para-3">Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields.</p>
-  	</div>
-  	</div>
 
-  	<div class="sec-7">
-  			<img src="google image.jpg" id="img-3">
-  		<h2>GRAPHIC DESIGN</h2>
-  		<p  id="para-3">Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields.</p>
-  	</div>
-  	</div>
+
+
+  <!--<section class="SECTION-FIVE">
+          <div class="sec-5">
+              <img src="google image.jpg" id="google-plus">
+              <h2 id="heading-grapgics"> GRAPHIC DESIGN</h2>
+              <p  id="para-google">Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields.</p>
+          </div>
+          <div class="sec-6">
+              <img src="google image.jpg" id="google-plus">
+              <h2 id="heading-grapgics">GRAPHIC DESIGN</h2>
+              <p  id="para-google">Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields.</p>
+          </div>
+          </div>
+        <div class="sec-7">
+          <img src="google image.jpg" id="google-plus">
+          <h2 id="heading-grapgics">GRAPHIC DESIGN</h2>
+          <p  id="para-google">Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields.</p>
+        </div>
+       </div>
+  </section>-->
+
+
+<section class="SECTION-SIX">
+    <div class="sec-8">
+      <img src="image-3.png" id="sec-6-img">
+    </div>
+
+    <div class="sec-8">
+      <h1 id="heading-letsmake">Let's Make Magic</h1>
+      <hr id="line-letsmake">
+      <p  id="para-letsmake">Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields.Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields projects and design   fields.</p>  
+    </div>
   </section>
 
 
 
-  <section class="SECTION-SIX">
-  	<div class="sec-8">
-  		<img src="image-3.png" id="img-4">
-  	</div>
-
-  	<div class="sec-8">
-  		<h1 id="heading-3">Let's Make Magic</h1>
-  		<hr id="line-3">
-  		<p  id="para-4">Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields.Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields projects and design   fields.</p>	
-  	</div>
-  </section>
-
-
-
-   <!--<section class="SECTION-SEVEN">
-   	<div class="sec-9">
-   			<h2 id="heading-4">Portfolio</h2>
-  			<hr id="line-4">
-   	</div>
-   		<div class="sec-9">
-   		<div class="lists">
-					<ol>
-						<li><a href="all"><span>ALL</span></a></li>
-						<li><a href="brading"><span>BRANDING</span></a></li>
-						<li><a href="design"><span>DESIGN</span></a></li>
-						<li><a href="photographi"><span>PHOTOGRAPHY</span></a></li>
-						<li><a href="blogs"><span>BLOGS</span></a></li>
-					</ol>
-				</div>
-   	</div>
-   	</section>-->
+        <section class="SECTION-SEVEN">
+            <div class="sec-9">
+                   <h2 id="heading-portfolio">Portfolio</h2>
+                    <hr id="line-portfolio">
+            </div>
+              <div class="sec-10">
+                 <div class="list-portfolio">
+                    <ul id=ul-2>
+                        <li id="li-2"><a href="all"><span>ALL</span></a></li>
+                        <li id="li-2"><a href="brading"><span>BRANDING</span></a></li>
+                        <li id="li-2"><a href="design"><span>DESIGN</span></a></li>
+                        <li id="li-2"><a href="photographi"><span>PHOTOGRAPHY</span></a></li>
+                        <li id="li-2"><a href="blogs"><span>BLOGS</span></a></li>
+                   </ul>
+                  </div>
+                </div>
+        </section>
 
 
-   	<section class="eight">
-      	<div class="item-1"></div>
-   	    <div class="item-1"></div>
-   	    <div class="item-1"></div>
-   	    <div class="item-1"></div>
-   		  <div class="item-1"></div>
-   			<div class="item-1"></div>
-   			<div class="item-1"></div>
-   			<div class="item-1"></div>
+     <section class="SECTION-EIGHT">
+        <div class="item-1"></div>
+        <div class="item-1"></div>
+        <div class="item-1"></div>
+        <div class="item-1"></div>
+        <div class="item-1"></div>
+        <div class="item-1"></div>
+        <div class="item-1"></div>
+        <div class="item-1"></div>
    </section>
 
 
-   <section class="nine">
-   	<h1 id="heading-4">VIEW MORE PROJECTS</h1>
+   <section class="SECTION-NINE">
+    <h1 id="heading-viewmore">VIEW MORE PROJECTS</h1>
    </section>
 
 
 
-    <section class="ten">
-   	<p id="para-5">Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields.</p>
+    <section class="SECTION-TEN">
+    <p id="para-secten">Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields.</p>
    </section>
 
-   <section class="eleven">
-   	<img src="image-4.png" id="img-5">
+   <section class="SECTION-ELEVEN">
+    <img src="image-4.png" id="sec-11-img">
    </section>
 
-    <section class="twelve">
-      	<div class="block-1">
-      		<h3>200</h3>
-      		<h6>Web Design</h6>
-      	</div>
-      	<div class="block-1">
-      		<h3>300</h3>
-      		<h6>Web Design</h6>
-      	</div>
-      	<div class="block-1">
-      		<h3>400</h3>
-      		<h6>Web Design</h6>
-      	</div>
-      	<div class="block-1">
-      		<h3>500</h3>
-      		<h6>Web Design</h6>
-      	</div>
+    <section class="SECTION-TWELVE">
+       <div class="list-number">
+                    <ul id="ul-3">
+                        <li id="li-3">200<h6 id="web">wed design</h6></li>
+                        <li id="li-3">300<h6 id="web">wed design</h6></li>
+                        <li id="li-3">400<h6 id="web">wed design</h6></li>
+                        <li id="li-3">500<h6 id="web">wed design</h6></li>
+                   </ul>
+                  </div>
       </section>
 
 
 
 
-  <section class="thirteen">
-	     <img src="image-2.png" id="img-6">
-	</section>
+                          <section class="SECTION-THIRTEEN">
+                                   <img src="image-2.png" id="sec-13-img">
+                           </section>
 
 
-<section class="fourteen">
-	<h1 id="heading-5">Our Team</h1>
-	<hr id="line-5">
-	<div class="sec-user">
-		<div id=user-1>
-			<img src="image-5.png" id="img-7">
-			<span id="UH-1">Barry Allen</span>
-		</div>
-		<div id=user-1>
-				<img src="image-5.png" id="img-7">
-				<span id="UH-1">Barry Allen</span>
-		</div>
-		<div id=user-1>
-				<img src="image-5.png" id="img-7">
-				<span id="UH-1">Barry Allen</span>
-		</div>
-	</div>
-</section>
+                <section class="SECTION-FOURTEEN">
+                            <h1 id="heading-ourteam">Our Team</h1>
+                            <hr id="line-ourteam">
+                       <div class="sec-user">
+                  <div id=user-1>
+                        <img src="image-5.png" id="user-img">
+                        <span id="barry-1">Barry Allen</span>
+                      </div>
+                  <div id=user-1>
+                       <img src="image-5.png" id="user-img">
+                       <span id="barry-1">Barry Allen</span>
+                  </div>
+                       <div id=user-1>
+                        <img src="image-5.png" id="user-img">
+                       <span id="barry-1">Barry Allen</span>
+                     </div>
+                    </div>
+                </section>
 
 
-<section class="fiftteen">
-<h1 id="heading-6">Pricing Plans</h1>
-	<hr id="line-6">
-	<div class="pricing">
-		<div id=card-1>
-			<h5>Design</h5>
-			<div class="h-1"><span id="doller">$</span><span id="num">29</span><span id="month">/mon</span></div>
-			<table>
- 
+                  <section class="SECTION-FIFTEEN">
+                        <h1 id="heading-pricing">Pricing Plans</h1>
+                        <hr id="line-pricing">
+                        <div class="pricing-card">
+                         <div id=card-1>
+                   <h5>Design</h5>
+                       <div class="h-1"><span id="doller">$</span><span id="num">29</span><span id="month">/mon</span></div>
+<table>
   <tr>
     <td>1 Logo Design</td>
   </tr>
@@ -229,13 +219,13 @@
 </table>
 
         <h4>CHOOSE PLANS</h4>
-		</div>
+    </div>
 
 
-		<div id=card-1>
-			<h5>Intermediate</h5>
-			<div class="h-1"><span id="doller">$</span><span id="num">39</span><span id="month">/mon</span></div>
-			<table>
+    <div id=card-1>
+      <h5>Intermediate</h5>
+      <div class="h-1"><span id="doller">$</span><span id="num">39</span><span id="month">/mon</span></div>
+      <table>
  <tr>
     <td>1 Logo Design</td>
   </tr>
@@ -256,11 +246,11 @@
   </div>
 
 
-		<div id=card-1>
-			<h5>Advance</h5>
-			<div class="h-1"><span id="doller">$</span><span id="num">29</span><span id="month">/mon</span></div>
+    <div id=card-1>
+      <h5>Advance</h5>
+      <div class="h-1"><span id="doller">$</span><span id="num">29</span><span id="month">/mon</span></div>
 <table>
-				<tr>
+        <tr>
     <td>1 Logo Design</td>
   </tr>
   <tr>
@@ -277,30 +267,30 @@
   </tr>
 </table>
 <h4>CHOOSE PLANS</h4>
-			</div>
-	</div>
+      </div>
+  </div>
 </section>
 
 
-  <section class="sixteen">
-  	<div class="sec-10">
-  		<h1 id="heading-7">Get in Touch</h1>
-  		<hr id="line-7">
+  <section class="SECTION-SIXTEEN">
+    <div class="sec-getintouch-1">
+      <h1 id="heading-getintouch">Get in Touch</h1>
+      <hr id="line-getintouch">
 
-  		<div class="login">
-  			  <input type="text" name="username" placeholder="Your Name">
-  				<input type="email" name="email" placeholder="Your Email">
-  				<textarea placeholder="Your Massage" id="text"></textarea>
+      <div class="login">
+          <input type="text" name="username" placeholder="Your Name">
+          <input type="email" name="email" placeholder="Your Email">
+          <textarea placeholder="Your Massage" id="text"></textarea>
           <button type="button">SEND MASSEGE</button>
       </div>
   </div>
-  	    <div class="sec-10">
-      	<img src="image-6.png" id="img-8">
-  	    </div>
+        <div class="sec-getintouch-2">
+        <img src="map.png" id="sec-16-img">
+        </div>
   </section>
 
 
-  <section class="seventeen">
+  <!--<section class="seventeen">
     <div class="sec-11">
       <img src="image-7.jpg" id="img-9">
       <hr id=line-8>
@@ -338,36 +328,7 @@
   <div class="mytheam">
     @ 2018 My Theam
   </div>
-</section>
+</section>-->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
-
-
-
-
-
-
-
-
-
-	</body>
-	</html>
+</body>
+  </html>
