--- a/AssignFirst.html
+++ b/AssignFirst.html
@@ -290,14 +290,14 @@
   </section>
 
 
-  <!--<section class="seventeen">
-    <div class="sec-11">
-      <img src="image-7.jpg" id="img-9">
-      <hr id=line-8>
+  <section class="SECTION-SEVENTEEN">
+    <div class="sec-footer">
+      <img src="image-7.jpg" id="img-footer">
+      <hr id="line-footer">
     </div>
 
-      <div class="list-2">
-          <ol id="l-2">
+      <div class="list-footer-1">
+          <ol id="l-float">
             <li><a href="home"><span>HOME</span></a></li>
             <li><a href="Aboutus"><span>ABOUT US</span></a></li>
             <li><a href="portfolio"><span>PORTFOLIO</span></a></li>
@@ -308,8 +308,8 @@
         </div>
 
 
-         <div class="list-3">
-          <ol id="l-3">
+        <!-- <div class="list-footer-2">
+          <ol id="l-float">
             <li><a href="home"><span>Address</span></a></li>
             <li><a href="Aboutus"><span>Address</span></a></li>
             <li><a href="portfolio"><span>Address</span></a></li>
@@ -324,7 +324,7 @@
 </section>
 
 
-<section class="eighteen">
+<!--<section class="eighteen">
   <div class="mytheam">
     @ 2018 My Theam
   </div>
