--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   
-   <section class="SECTION-ONE">
+  <!--<section class="SECTION-ONE">
     <div class="nav-bar">
       <div class="google-img.png"><img src="images/google-icon.png" id="log-img"></div>
       <div class="navigation-list">
@@ -108,17 +108,21 @@
 
 
 
-<!--<section class="SECTION-SIX">
+ <section class="SECTION-SIX">
   <div class="sec-8">
     <img src="images/image-3.png" id="sec-6-img">
   </div>
   
-  <div class="sec-8">
+  <div class="sec-letsmake">
     <h1 id="heading-letsmake">Let's Make Magic</h1>
     <hr id="line-letsmake">
-    <p  id="para-letsmake">Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields.Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields projects and design   fields.</p>  
+    <p  id="para-letsmake">Design is a work process which has a user perspective and drives 
+      development based on your specific customers' needs.The design process varies between
+       different projects and design fields.Design is a work process which has a user perspective
+        and drives development based on your specific customers' needs.The design process varies
+         between different projects and design fields projects and design   fields.</p>  
   </div>
-</section>
+</section>-->
 
 
 
@@ -141,7 +145,7 @@
 </section>
 
 
-<section class="SECTION-EIGHT">
+  <section class="SECTION-EIGHT">
   <div class="item-1"></div>
   <div class="item-1"></div>
   <div class="item-1"></div>
@@ -153,17 +157,19 @@
 </section>
 
 
-<section class="SECTION-NINE">
+   <section class="SECTION-NINE">
   <h1 id="heading-viewmore">VIEW MORE PROJECTS</h1>
 </section>
 
 
 
 <section class="SECTION-TEN">
-  <p id="para-sec-ten">Design is a work process which has a user perspective and drives development based on your specific customers' needs.The design process varies between different projects and design fields.</p>
+  <p id="para-sec-ten">Design is a work process which has a user perspective and drives 
+    development based on your specific customers' needs.The design process varies between 
+    different projects and design fields.</p>
   
-  <!--<h3 id="barry-allen">BARRY ALLEN</h3>-->
-<!--</section>
+  <h3 id="barry-allen">BARRY ALLEN</h3>
+</section>
 
 
 
@@ -175,7 +181,7 @@
 
 
 
-<section class="SECTION-TWELVE">
+<!--<section class="SECTION-TWELVE">
   <div class="list-number">
     <ul id="ul-num">
       <li id="li-num">200<h6 id="web">Wed Design</h6></li>
